Add bootstrap base template and angular resource example

--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -2,11 +2,44 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
+  <script src="/static/jquery.min.js"></script>
+  <script src="/static/bootstrap.min.js"></script>
+  <script src="/static/angular.min.js"></script>
+  <script src="/static/angular-resource.min.js"></script>
 	<title>Title</title>
+  
+  {% block head %}
+  {% endblock %}
 </head>
 
 <body>
-{% block body %}
-{% endblock %}
+<div class="container">
+      <div class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+            </button>
+            <a href="#" class="navbar-brand">Your Company</a>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li class="active">
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#">About</a>
+              </li>
+              <li>
+                <a href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      {% block body %}
+      {% endblock %}
+    </div>
 </body>
 </html>
